--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="https://github.com/anulanjewar0504">Github</a>
         </div>
         <div class="link">
-            <a href="https://www.instagram.com/https.anurag/">Instagram</a>
+            <a href="https://www.instagram.com/https.codecraft/">Instagram</a>
         </div>
     </div>
 
